public/stylesheets/style.css
body {
  padding: 0 15px 0 15px;
}

a {
  transition: .3s;
  text-align: center;
}

h1 {
  font-size: 70px;
  font-family: 'Montserrat', sans-serif;
}

#logo {
  font-family: 'Oswald', sans-serif;
  text-align: center;
  font-size: 175px !important; 
  transform: rotate(-90deg);
  margin-top: 30vh;
  margin-right: -40px;
}

.intro {
  max-width: 450px;
  text-align: justify;
  margin: 0 auto;
  font-size: 18px;
}

.content-container {
  display: flex; 
}

.marquee div {
  margin: 0;
  display: block;
  width: 100%;
  height: 30px;
  transform: rotate(-90deg);
  position: relative;
  animation: marquee 5s linear infinite;
}

.marquee span {
  position: absolute;
  color: white;
  font-size: 15px;
  /* float: left; */
  width: 540px !important;
}

@keyframes marquee {
  0% { bottom: 0; }
  100% { bottom: -97vh; }
}

.tableHeader {
  text-align: center !important;
  background-color: rgb(128, 128, 128);
  color: rgb(255, 255, 255);
  font-weight: bold;  
  font-size: 17px;
}

.description li {
  font-size: 20px;
}

.apply-button, .generate-button, .new-button {
  margin: 10px;
  width: 170px;
  height: 35px;
  border-radius: 10px;
  border: 1px solid rgb(99, 99, 99);
  background-color: rgba(162, 162, 162, 0.288);
  font-weight: bold;
}

.apply-button:hover, .generate-button:hover, .new-button:hover {
  background-color:rgb(128, 128, 128);
  color: rgb(255, 255, 255);
} 

.loading {
  width: 100px;
  height: 100px;
  border: 20px solid rgba(0, 0, 0, 0.1);
  border-left-color: #7983ff;
  border-radius: 50%;
  animation: spin 1s linear infinite;
  position: fixed;
  top: 50%;
  left: 50%;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.menu {
  background-color: rgb(128, 128, 128);
}

.menu p {
  text-decoration: none;
  color: rgb(255, 255, 255);
  padding: 15px 12px 15px 12px;
  margin-bottom: 15px;
  font-size: 25px;
  width: 100%;
  background-color: transparent;
}

.menu p:hover {
  text-decoration: none;
  background-color: rgb(255, 255, 255);
  color: #313131;
  font-weight: 700;
  margin-left: 10px;
  transition: 0.5s;
  border-radius: 10px;
}

.menu a:hover {
  text-decoration: none
}

.header {
  text-align: center;
  margin-top: 65px;
  font-size: 22px;
}

table {
  margin-top: 0px;
  width: 100%; 
  height: 100px; 
  vertical-align: center;
}

th, td {
  text-align: center;
  font-family: 'JetBrains Mono', monospace;
  font-size: 13px;
  vertical-align: middle;
}

.new-form {
  display: block;
  justify-content: center;
  text-align: center;
  width: 100%;
  font-size: 20px;
  font-family: 'Montserrat', sans-serif;
}

.new-input {
  text-align: left;
} 

.delete-button {
  background-color: rgb(249, 66, 66);
  color: rgb(255, 255, 255);
  border: none;
  width: 25px;
  height: 25px;
  border-radius: 5px;
}

.update-button {
  border: none;
  font-size: 18px;
  width: 26px;
  height: 27px;
  border-radius: 5px;
}

.login {
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-auth {
  width: 130px;
  background-color: rgb(255, 255, 255);
  color: rgb(0, 0, 0);
  margin: 0 auto;
  padding: 12px;
  font-weight: bold;
  border-radius: 5px;
}

.login img {
  height: 20px;
}

.styleset-user, .theme-user {
  justify-content: center;
  align-items: center;
}

.styleset-user img, .theme-user img {
  border-radius: 50%;
  height: 35px;
}

hr {
  border: 0;
  height: 1px;
  background: transparent;
  border-top: 1px dotted rgb(51, 51, 51); 
  margin: 10px 0;   
}

.hover-effect, #hover-effect-update, #hover-effect-delete,.delete-button {
  transition: transform 0.3s ease;
}

.hover-effect:hover, #hover-effect-update:hover, #hover-effect-delete:hover, .delete-button:hover {
  transform: scale(1.1);
}

